--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -90,6 +90,6 @@
         <item>"softap.*"</item>
     </string-array>
 
-    <!-- Device supports LED flashlight -->
-    <bool name="config_enableTorch">true</bool>
+   <!-- Is the device LTE capable -->
+   <bool name="config_lte_capable">false</bool>
 </resources>
